fix menu wrap on pfense_ng and pfsense_ng_fs

--- a/usr/local/www/themes/pfsense_ng/all.css
+++ b/usr/local/www/themes/pfsense_ng/all.css
@@ -1,6 +1,6 @@
 /* Element CSS Definitions */
 html, body, td, th, input, select {
-	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	font-family: Tahoma, sans-serif;
 	font-size: 0.9em;
 
 }
@@ -407,7 +407,6 @@ table#marquee div#container div#scroller {
 	position: fixed;
 	top: 0px;
 	left: 100px;
-	width: 750px;
 	padding: 0px;
 	height: 28px;
 	z-index: 3;
@@ -428,7 +427,7 @@ table#marquee div#container div#scroller {
 #navigation ul li {
 	float: left;
 	position: relative;
-	padding-right: 27px;
+	padding-right: 20px;
 	top: 0px;
 }
 
